tests/NormalTests/paczka1/fuzzy1/95585917.err
Error in line 1: 3mex6193U S383 59,8
Error in line 6: 14phBDK S167 218,7
Error in line 7: YXSkGXyDqp S383 24,8
Error in line 9: S167 S167 2,6
Error in line 18: EbOHo5KJA S55 51,0
Error in line 27: 3mex6193U S167 5,2
Error in line 28: 3mex6193U S383 87,0
